<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kandoe.Activity.Fragment.ChatFragment"
    android:background="@color/white">
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvMessages"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/divider"
        android:divider="@android:color/transparent"
        android:clickable="false"
        android:background="@android:color/transparent"
        android:paddingBottom="5dp"
  />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/divider"
        android:background="#6b6b6b"
        android:layout_alignTop="@+id/txtMsg"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtMsg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnSend"
        android:layout_margin="5dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSend"
        android:layout_below="@+id/divider"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_send_black_24dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless" />
</RelativeLayout>
