...

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_players"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/votebutton"
            style="@style/Widget.AppCompat.Button"
            android:theme="@style/MyButton"
            android:src="@drawable/ic_group"
            android:scaleType="centerCrop"
            android:layout_marginLeft="5dp" />

...
        android:layout_height="wrap_content"
        android:id="@+id/view" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvCards"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="false" />
</LinearLayout>

