...
        android:layout_marginLeft="0dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <GridView
        android:id="@+id/grdcards"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:layout_alignParentBottom="true"
...
        android:padding="15dp"
        android:backgroundTintMode="src_atop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        android:enabled="false"
        android:focusable="false"
        android:textSize="18dp"
        android:visibility="invisible"
        android:layout_above="@+id/grdmycards"
        android:layout_alignParentEnd="true" />
...
