<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explv"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:listitem="@android:layout/simple_expandable_list_item_1" />

</RelativeLayout>
