<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:id="@+id/register">

    <TextView
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="@color/primary_dark"
        android:autoText="false"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:layout_alignStart="@+id/logo" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:src="@drawable/logozondertekst"
        android:padding="15dp"
        android:id="@+id/logo"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtregister_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtregister_password"
        android:layout_below="@+id/txtregister_email"
        android:layout_alignLeft="@+id/txtregister_email"
        android:layout_alignStart="@+id/txtregister_email"
        android:layout_marginTop="15dp"
        android:hint="@string/register_password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtregister_confirmpassword"
        android:layout_below="@+id/txtregister_password"
        android:layout_alignLeft="@+id/txtregister_password"
        android:layout_alignStart="@+id/txtregister_password"
        android:layout_marginTop="15dp"
        android:hint="@string/register_repeatPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtregiser_firstname"
        android:layout_below="@+id/txtregister_confirmpassword"
        android:layout_alignLeft="@+id/txtregister_confirmpassword"
        android:layout_alignStart="@+id/txtregister_confirmpassword"
        android:layout_marginTop="15dp"
        android:hint="@string/register_firstName"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtregister_last_name"
        android:layout_below="@+id/txtregiser_firstname"
        android:layout_alignLeft="@+id/txtregiser_firstname"
        android:layout_alignStart="@+id/txtregiser_firstname"
        android:layout_marginTop="15dp"
        android:hint="@string/register_lastName"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/register_txtError"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@+id/txtregister_last_name"
        android:layout_alignLeft="@+id/txtregister_last_name"
        android:layout_alignStart="@+id/txtregister_last_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txtregister_last_name"
        android:gravity="center"
        android:weightSum="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_create"
            android:id="@+id/btn_createAccount"
            android:background="@color/primary_dark"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/dark_grey"
            android:layout_below="@+id/last_name"
            android:layout_gravity="center"
            android:layout_weight="0.37" />
    </LinearLayout>
</RelativeLayout>